# nipat-desktop

./: .dockerignore  .gitattributes  .gitignore  README.md  compose.yaml  pyproject.toml
config/: defaults.toml
docker/scientific-runtime/: Dockerfile
docs/: ARCHITECTURE.md  DECISIONS.md
scientific/: README.md  SHA256SUMS
src/nipat/: __init__.py  __main__.py  cli.py  errors.py  paths.py
src/nipat/adapters/: __init__.py  panels.py
src/nipat/execution/: __init__.py  runner.py  workflows.py
src/nipat/validation/: files.py  integrity.py
tests/: test_panels.py  test_paths.py  test_validation.py
